examples/diagnostics/expected/1171-diagnostics-logical-not-bad-operand.stderr
error: '!' needs a bool, integer, or error operand; got 'string'
  --> examples/diagnostics/1171-diagnostics-logical-not-bad-operand.sx:8:8
   |
 8 |     if !s { print("unreachable\n"); }
   |        ^^
